Refactor scripts to React components

--- a/src/pages/Popup/index.html
+++ b/src/pages/Popup/index.html
@@ -3,16 +3,17 @@
   Hello! ThemeSong will be open-source soon™️!
 
   Current tech:
-  * React
-  * Redux
+  * React (React 17)
+  * Redux (Redux Toolkit)
   * Emotion
   * MUI
+  * and more
 
   Thanks for being here!
 
-  - ThemeSong dev
+  - ThemeSong dev (KT)
 -->
-<html lang="en">
+<html lang="en-US">
   <head>
     <meta charset="UTF-8" />
     <title>ThemeSong Popup Settings</title>
