Update website with GitHub link and new styling

--- a/apps/website/index.html
+++ b/apps/website/index.html
@@ -27,14 +27,19 @@
     <a
       href="https://chrome.google.com/webstore/detail/bgfiegdbajagebogifobkhambpljbfmk"
       target="_blank"
-      >Chrome Web Store</a
     >
+      Chrome Web Store
+    </a>
     <br />
     <a
       href="https://addons.mozilla.org/firefox/addon/themesong-for-youtube-music/"
       target="_blank"
-      >Firefox Add-ons</a
     >
-    <p>GitHub - open source (coming soon)</p>
+      Firefox Add-ons
+    </a>
+    <br />
+    <a href="https://github.com/KristofferTroncoso/ThemeSong" target="_blank">
+      GitHub
+    </a>
   </body>
 </html>
